--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +15,8 @@
   <div class="container">
     <div class="top-bar">
       <button id="dailyDevotionalButton">Daily Devotional</button>
-      <h1><span class="bible">Bible</span> <span class="app">App</span></h1>
+      <button id="bibleAppButton" style="display: none;">Bible App</button>
+      <h1 id="appTitle"><span class="bible">Bible</span> <span class="app">App</span></h1>
       <button id="darkModeToggle">Dark Mode</button>
     </div>
 
