--- a/index.html
+++ b/index.html
@@ -1,167 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bible App</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bible App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <div class="container">
-    <div class="top-bar">
-      <button id="dailyDevotionalButton">Daily Devotional</button>
-      <button id="bibleAppButton" style="display: none;">Bible App</button>
-      <h1 id="appTitle"><span class="bible">Bible</span> <span class="app">App</span></h1>
-      <button id="darkModeToggle">Dark Mode</button>
-    </div>
-
-    <div class="top-buttons">
-      <div class="pills-container">
-        <div class="pill" id="combinedPill">
-          <span id="bookPill" data-value="John">
-            <select id="bookSelect"></select>
-          </span>
-          <span id="chapterPill" data-value="3">
-            <select id="chapterSelect"></select>
-          </span>
-          <span id="versionPill" data-value="KJV">
-            <select id="versionSelectTop">
-              <option value="KJV">KJV</option>
-              <option value="ASV">ASV</option>
-              <option value="WEB">WEB</option>
-            </select>
-          </span>
+    <div class="container">
+        <div class="top-bar">
+            <button id="dailyDevotionalButton">Daily Devotional</button>
+            <button id="bibleAppButton" style="display: none;">Bible App</button>
+            <h1 id="appTitle"><span class="bible">Bible</span> <span class="app">App</span></h1>
+            <button id="darkModeToggle">Dark Mode</button>
         </div>
-      </div>
-      <p class="instruction-text">Select a Bible book to read from the tabs on left or search for one below!</p>
-      <div class="font-buttons">
-        <button id="decreaseFont">-</button>
-        <button id="increaseFont">+</button>
-      </div>
-    </div>
 
-    <div class="search-container">
-      <input type="text" id="questionInput"
-        placeholder="Enter Bible Book, Chapter, Verse, or multiple verses separated by ';'. (e.g., John, Mark 5:6; Romans 8:28-31)">
-      <button id="searchButton">Search</button>
-    </div>
+        <div class="bible-app-elements">
+            <div class="top-buttons">
+                <div class="pills-container">
+                    <div class="pill" id="combinedPill">
+                        <span id="bookPill" data-value="John">
+                            <select id="bookSelect"></select>
+                        </span>
+                        <span id="chapterPill" data-value="3">
+                            <select id="chapterSelect"></select>
+                        </span>
+                        <span id="versionPill" data-value="KJV">
+                            <select id="versionSelectTop">
+                                <option value="KJV">KJV</option>
+                                <option value="ASV">ASV</option>
+                                <option value="WEB">WEB</option>
+                            </select>
+                        </span>
+                    </div>
+                </div>
+                <p class="instruction-text">Select a Bible book to read from the tabs on left or search for one below!</p>
+                <div class="font-buttons">
+                    <button id="decreaseFont">-</button>
+                    <button id="increaseFont">+</button>
+                </div>
+            </div>
 
-    <div class="chapter-navigation">
-      <button id="copySelectedTop">Copy Selected Verse</button>
-      <button id="shareSelectedTop">Share Selected Verse</button>
-      <button id="prevChapterTop">Previous Chapter</button>
-      <button id="nextChapterTop">Next Chapter</button>
-      <div id="shareOptionsTop" class="share-options" style="display: none;">
-        <a href="#" id="shareFacebookTop">Facebook</a> |
-        <a href="#" id="shareXTop">X</a> |
-        <a href="#" id="shareRedditTop">Reddit</a> |
-        <a href="#" id="shareGoogleDocsTop">Google Docs</a> |
-        <a href="#" id="shareWordTop">Word</a> |
-        <a href="#" id="shareEmailTop">Email</a> |
-        <a href="#" id="shareTextTop">Text</a>
-      </div>
-    </div>
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Enter search query here">
+                <button id="searchButton">Search</button>
+            </div>
 
-    <div id="answerDisplay"></div>
+            <div class="chapter-navigation">
+                <button id="copySelectedVerse">Copy Selected Verse</button>
+                <button id="shareSelectedVerse">Share Selected Verse</button>
+                <button id="prevChapter">Previous Chapter</button>
+                <button id="nextChapter">Next Chapter</button>
+                <div id="shareOptions" class="share-options" style="display: none;">
+                    <a href="#" id="copyVerseLink">Copy</a> |
+                    <a href="#" id="shareFacebookVerse">Facebook</a> |
+                    <a href="#" id="shareXVerse">X</a> |
+                    <a href="#" id="shareRedditVerse">Reddit</a> |
+                    <a href="#" id="shareGoogleDocsVerse">Google Docs</a> |
+                    <a href="#" id="shareWordVerse">Word</a> |
+                    <a href="#" id="shareEmailVerse">Email</a> |
+                    <a href="#" id="shareTextVerse">Text</a>
+                </div>
+            </div>
 
-    <div class="chapter-navigation">
-      <button id="copySelected">Copy Selected Verse</button>
-      <button id="shareSelected">Share Selected Verse</button>
-      <button id="prevChapter">Previous Chapter</button>
-      <button id="nextChapter">Next Chapter</button>
-      <div id="shareOptions" class="share-options" style="display: none;">
-        <a href="#" id="shareFacebook">Facebook</a> |
-        <a href="#" id="shareX">X</a> |
-        <a href="#" id="shareReddit">Reddit</a> |
-        <a href="#" id="shareGoogleDocs">Google Docs</a> |
-        <a href="#" id="shareWord">Word</a> |
-        <a href="#" id="shareEmail">Email</a> |
-        <a href="#" id="shareText">Text</a>
-      </div>
-    </div>
+            <div id="answerDisplay"></div>
 
-    <div class="top-buttons devotional-elements" style="display: none;">
-      <div class="date-pill">
-        <select id="monthSelect">
-          <option value="1">Jan</option>
-          <option value="2">Feb</option>
-          <option value="3">Mar</option>
-          <option value="4">Apr</option>
-          <option value="5">May</option>
-          <option value="6">Jun</option>
-          <option value="7">Jul</option>
-          <option value="8">Aug</option>
-          <option value="9">Sep</option>
-          <option value="10">Oct</option>
-          <option value="11">Nov</option>
-          <option value="12">Dec</option>
-        </select>
-        /
-        <select id="daySelect"></select>
-        /
-        <span id="yearDisplay"></span>
-      </div>
-      <p id="welcomeMessage">Welcome, hope you are blessed by your reading today! In Jesus' name I pray. Amen!</p>
-      <div class="font-buttons">
-        <button id="decreaseFontDevotional">-</button>
-        <button id="increaseFontDevotional">+</button>
-      </div>
-    </div>
-
-    <div class="top-buttons devotional-elements" style="display: none;">
-      <button id="audioButton">Audio</button> 
-    </div>
-
-    <nav aria-label="Main Navigation" class="devotional-elements" style="display: none;">
-      <div class="chapter-navigation"> 
-        <button id="copyDevotionalTop">Copy Devotional</button>
-        <button id="shareDevotionalTop">Share Devotional</button>
-        <button id="prevDevotionalTop">Prior Day</button> 
-        <button id="nextDevotionalTop">Next Day</button>
-        <div id="shareOptionsDevotionalTop" class="share-options" style="display: none;">
-          <a href="#" id="shareFacebookDevotionalTop">Facebook</a> |
-          <a href="#" id="shareXDdevotionalTop">X</a> |
-          <a href="#" id="shareRedditDevotionalTop">Reddit</a> |
-          <a href="#" id="shareGoogleDocsDevotionalTop">Google Docs</a> |
-          <a href="#" id="shareWordDevotionalTop">Word</a> |
-          <a href="#" id="shareEmailDevotionalTop">Email</a> |
-          <a href="#" id="shareTextDevotionalTop">Text</a>
+            <div class="chapter-navigation">
+                <button id="copySelectedVerse">Copy Selected Verse</button>
+                <button id="shareSelectedVerse">Share Selected Verse</button>
+                <button id="prevChapter">Previous Chapter</button>
+                <button id="nextChapter">Next Chapter</button>
+                <div id="shareOptions" class="share-options" style="display: none;">
+                    <a href="#" id="copyVerseLink">Copy</a> |
+                    <a href="#" id="shareFacebookVerse">Facebook</a> |
+                    <a href="#" id="shareXVerse">X</a> |
+                    <a href="#" id="shareRedditVerse">Reddit</a> |
+                    <a href="#" id="shareGoogleDocsVerse">Google Docs</a> |
+                    <a href="#" id="shareWordVerse">Word</a> |
+                    <a href="#" id="shareEmailVerse">Email</a> |
+                    <a href="#" id="shareTextVerse">Text</a>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <div id="devotionalText"></div>
 
-      <div class="chapter-navigation">
-        <button id="copyDevotional">Copy Devotional</button>
-        <button id="shareDevotional">Share Devotional</button>
-        <button id="prevDevotional">Prior Day</button> 
-        <button id="nextDevotional">Next Day</button>
-        <div id="shareOptionsDevotional" class="share-options" style="display: none;">
-          <a href="#" id="shareFacebookDevotional">Facebook</a> |
-          <a href="#" id="shareXDdevotional">X</a> |
-          <a href="#" id="shareRedditDevotional">Reddit</a> |
-          <a href="#" id="shareGoogleDocsDevotional">Google Docs</a> |
-          <a href="#" id="shareWordDevotional">Word</a> |
-          <a href="#" id="shareEmailDevotional">Email</a> |
-          <a href="#" id="shareTextDevotional">Text</a>
+        <div class="devotional-elements" style="display: none;">
+            <div class="top-buttons">
+                <div class="date-pill">
+                    <select id="monthSelect">
+                        <option value="1">Jan</option> 
+                        <option value="2">Feb</option> 
+                        <option value="3">Mar</option> 
+                        <option value="4">Apr</option> 
+                        <option value="5">May</option> 
+                        <option value="6">Jun</option> 
+                        <option value="7">Jul</option> 
+                        <option value="8">Aug</option> 
+                        <option value="9">Sep</option> 
+                        <option value="10">Oct</option> 
+                        <option value="11">Nov</option> 
+                        <option value="12">Dec</option> 
+                    </select>
+                    /
+                    <select id="daySelect"></select>
+                    /
+                    <span id="yearDisplay"></span>
+                </div>
+                <p id="welcomeMessage">Welcome, hope you are blessed by your reading today! In Jesus' name I pray. Amen!</p>
+                <div class="font-buttons">
+                    <button id="decreaseFontDevotional">-</button>
+                    <button id="increaseFontDevotional">+</button>
+                </div>
+            </div>
+
+            <div class="top-buttons">
+                <button id="audioButton">Audio</button>
+            </div>
+
+            <nav aria-label="Main Navigation">
+                <div class="chapter-navigation">
+                    <button id="podcastsButton">Podcasts</button>
+                    <button id="shareDevotional">Share Devotional</button>
+                    <button id="prevDevotional">Prior Day</button>
+                    <button id="nextDevotional">Next Day</button>
+                    <div id="shareOptionsDevotional" class="share-options-devotional" style="display: none;">
+                        <a href="#" id="copyDevotionalLink">Copy</a> |
+                        <a href="#" id="shareFacebookDevotional">Facebook</a> |
+                        <a href="#" id="shareXDevotional">X</a> |
+                        <a href="#" id="shareRedditDevotional">Reddit</a> |
+                        <a href="#" id="shareGoogleDocsDevotional">Google Docs</a> |
+                        <a href="#" id="shareWordDevotional">Word</a> |
+                        <a href="#" id="shareEmailDevotional">Email</a> |
+                        <a href="#" id="shareTextDevotional">Text</a>
+                    </div>
+                </div>
+
+                <div id="devotionalText"></div>
+
+                <div class="chapter-navigation">
+                    <button id="podcastsButton">Podcasts</button>
+                    <button id="shareDevotional">Share Devotional</button>
+                    <button id="prevDevotional">Prior Day</button>
+                    <button id="nextDevotional">Next Day</button>
+                    <div id="shareOptionsDevotional" class="share-options-devotional" style="display: none;">
+                        <a href="#" id="copyDevotionalLink">Copy</a> |
+                        <a href="#" id="shareFacebookDevotional">Facebook</a> |
+                        <a href="#" id="shareXDevotional">X</a> |
+                        <a href="#" id="shareRedditDevotional">Reddit</a> |
+                        <a href="#" id="shareGoogleDocsDevotional">Google Docs</a> |
+                        <a href="#" id="shareWordDevotional">Word</a> |
+                        <a href="#" id="shareEmailDevotional">Email</a> |
+                        <a href="#" id="shareTextDevotional">Text</a>
+                    </div>
+                </div>
+            </nav>
+
+            <div class="search-container">
+                <input type="text" id="searchInput" placeholder="Enter search query here">
+                <button id="searchButton">Search</button>
+            </div>
         </div>
-      </div>
-    </nav>
 
-    <div class="search-container devotional-elements" style="display: none;">
-      <input type="text" id="searchInputDevotional"
-        placeholder="Search the Bible using the Bible App (e.g., Mark; John 3:16; Rom 8:28-31)">
-      <button id="searchButtonDevotional">Search</button>
     </div>
 
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
-
 </html>
